--- a/javascript4dawin.html
+++ b/javascript4dawin.html
@@ -69,7 +69,7 @@
     background-color: white;
     position: absolute;
     bottom: 0;
-    transition: height 0.5s ease-in-out;
+    transition: height 0.2s ease-in-out;
   }
 
   .mainStats {
@@ -97,7 +97,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        width: 150px;
+        width: 164px;
         height: 30px;
         background-color: #434343;
         border-radius: 5px;
@@ -106,9 +106,11 @@
         right: 8px;
         top: 10px;
         position: fixed;
+        padding-bottom: 60px;
+
       }
 
-      .button {
+    .button1 {
         padding: 0 18px;
         font-size: 13px;
         cursor: pointer;
@@ -121,14 +123,61 @@
         width: 94px;
         height: 55px;
         text-align: center;
-        
-      }
+        top: 12px;
+        position: fixed;
+        right: 114px;
+    }
 
-      .button:hover {
+      .button1:hover {
         background-color: lightgray;
         transform: scale(103%);
         transition: 0.3s;
       }
+
+    .button2 {
+        padding: 0 18px;
+        font-size: 13px;
+        cursor: pointer;
+        border-radius: 5px;
+        margin: 5px 5px;
+        border: transparent;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        transition: 0.2s;
+        background-color: whitesmoke;
+        width: 94px;
+        height: 55px;
+        text-align: center;
+        top: 12px;
+        position: fixed;
+        right: 10px;
+
+    }
+
+        .button2:hover {
+            background-color: lightgray;
+            transform: scale(103%);
+            transition: 0.3s;
+        }
+
+    .blackBox1 {
+        width: 96px;
+        height: 55px;
+        border-radius: 5px;
+        background-color: #1D1D1D;
+        position: fixed;
+        right: 118px;
+        top: 38px;
+    }
+
+    .blackBox2 {
+        width: 96px;
+        height: 55px;
+        border-radius: 5px;
+        background-color: #1D1D1D;
+        position: fixed;
+        right: 14px;
+        top: 38px;
+    }
 
       .overlay {
     display: none;
@@ -153,14 +202,14 @@
 }
 
 .progress-container {
-            width: 250px;
+            width: 228px;
             height: 25px;
             border: 1px solid #000;
             position: absolute;
             top: 110px; /* Adjust this value to position the progress bar */
             left: 50%;
             transform: translateX(-50%);
-            border-radius: 8px;
+            border-radius: 10px;
             overflow: hidden;
         }
 
@@ -168,7 +217,7 @@
             width: 0;
             height: 100%;
             background-color: gold;
-            border-radius: 8px;
+            border-radius: 10px;
             transition: width 0.3s ease-in-out;
         }
 
@@ -181,169 +230,218 @@
       color: white;
     }
 
+        .fillLine {
+            border-bottom: dashed;
+            border-color: red;
+            position: fixed;
+            left: 3px;
+            bottom: 350px;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-size: 16px;
+            padding-bottom: 3px;
+            border-width: 2px;
+            color: whitesmoke;
+            width: 180px;
+        }
+
+        .priceNumber1 {
+            position: fixed;
+            right: 156px;
+            top: 74px;
+            color: gold;
+            font-size: 17px;
+        }
+
+    .priceNumber2 {
+        position: fixed;
+        right: 53px;
+        top: 74px;
+        color: gold;
+        font-size: 17px;
+    }
+
 </style>
 
 <body>
 
     <p class="mainStats">
-      Level <span class="levelNumber">1</span><br>
-      Coins: <span class="coinsNumber">0</span>
+        Level <span class="levelNumber">1</span><br>
+        Coins: <span class="coinsNumber">0</span>
     </p>
-  <div class="mainbutton">
-    <button class="coolbutton" onclick="circleDrop(); startDelay(); increaseProgress()">
-      <p class="bigtext">Make it rain!</p>
-      <p class="smalltext">(it's cold outside)</p>
-    </button>
-  </div>
-
-  <div class="progress-container">
-    <div class="progress-text">30</div>
-    <div class="progress-bar" id="progressBar"></div>
-</div>
-
-  <div class="button-container">
-    <button class="button" onclick="upgradeDensity()">Upgrade Snowflake Power</button>
-    <button class="button" onclick="buttonClicked(2)">Upgrade Bonus Bar</button>
-  </div>
-
-  <div class="overlay" id="overlay">
-    <div class="message">
-        <p>Please resize your window to meet the required dimensions. Thanks! :)</p>
+    <div class="mainbutton">
+        <button class="coolbutton" onclick="circleDrop(); startDelay(); increaseProgress()">
+            <p class="bigtext">Make it rain!</p>
+            <p class="smalltext">(it's cold outside)</p>
+        </button>
     </div>
-</div>
 
-  <div id="whiteBox"></div>
+    <div class="progress-container">
+        <div class="progress-text">5</div>
+        <div class="progress-bar" id="progressBar"></div>
+    </div>
+
+    <div class="button-container">
+    </div>
+    <div class="blackBox1"></div>
+    <div class="blackBox2"></div>
+    <button class="button1" onclick="upgradeDensity()">Upgrade Snowflake Power</button>
+    <button class="button2" onclick="buttonClicked(2)">Upgrade Bonus Bar</button>
+
+    <span class="priceNumber1">
+        50
+    </span>
+    <span class="priceNumber2">
+        20
+    </span>
+
+    <div class="overlay" id="overlay">
+        <div class="message">
+            <p>Please resize your window to meet the required dimensions. Thanks! :)</p>
+        </div>
+    </div>
+
+    <div class="fillLine">Fill snow up to here</div>
+
+    <div id="whiteBox"></div>
 
 
-  <script>
-    let height = 1;
-    let lastClickTime = 0;
-    let snowflakes = 0;
-    let snowTime = 4200;
-    let snowflakeDensity = 5;
+    <script>
+        let height = 1;
+        let lastClickTime = 0;
+        let snowflakes = 0;
+        let snowTime = 4200;
+        let snowflakeDensity = 5;
 
-    function circleDrop() {
-      const fallingCircle = document.createElement('img');
-      fallingCircle.src = 'white-snowflake.png';
-      fallingCircle.classList.add('falling-snowflake');
+        function circleDrop() {
+            const fallingCircle = document.createElement('img');
+            fallingCircle.src = 'white-snowflake.png';
+            fallingCircle.classList.add('falling-snowflake');
 
-      // RNG for snowflake position
-      const windowWidth = window.innerWidth;
-      const randomLeft = Math.floor(Math.random() * windowWidth);
-      fallingCircle.style.left = `${randomLeft}px`;
+            // RNG for snowflake position
+            const windowWidth = window.innerWidth;
+            const randomLeft = Math.floor(Math.random() * windowWidth);
+            fallingCircle.style.left = `${randomLeft}px`;
 
-      document.body.appendChild(fallingCircle);
+            document.body.appendChild(fallingCircle);
 
-      fallingCircle.style.visibility = 'visible';
+            fallingCircle.style.visibility = 'visible';
 
-      fallingCircle.addEventListener('animationend', () => {
-        snowflakes--;
+            fallingCircle.addEventListener('animationend', () => {
+                snowflakes--;
 
-        if (snowflakes === 0) {
-            expandBox();
-            fallingCircle.remove(); // Free up Memory
+                if (snowflakes === 0) {
+                    expandBox();
+                    fallingCircle.remove(); // Free up Memory
+                }
+            });
+            snowflakes++;
         }
-      });
-      snowflakes++;
-    }
 
-    function startDelay() {
+        function startDelay() {
 
-      const currentTime = new Date().getTime();
-      const timeDiff = currentTime - lastClickTime;
+            const currentTime = new Date().getTime();
+            const timeDiff = currentTime - lastClickTime;
 
-      if (timeDiff >= snowTime) {
-        setTimeout(expandBox, snowTime);
-      } else {
-        setTimeout(expandBox, snowTime - timeDiff);
-      }
+            if (timeDiff >= snowTime) {
+                setTimeout(expandBox, snowTime);
+            } else {
+                setTimeout(expandBox, snowTime - timeDiff);
+            }
 
-      lastClickTime = currentTime;
-      snowTime -= 12;
+            lastClickTime = currentTime;
+            snowTime -= 15;   // was 14
 
-    }
+        }
 
-    function expandBox() {
-      const whiteBox = document.getElementById('whiteBox');
-      height += snowflakeDensity;
-      whiteBox.style.height = height + 'px';
+        function expandBox() {
+            const whiteBox = document.getElementById('whiteBox');
+            height += snowflakeDensity;
+            whiteBox.style.height = height + 'px';
 
-      // Reset snow level
-      if (height >= 100)
-      {
-        height = 1;
-        increaseLevel();
-      }
-      
-    }
+            // Reset snow level
+            if (height >= 350) {
+                height = 1;
+                increaseLevel();
+            }
 
-    function increaseLevel() {
-        // Get the element containing the level number by its class
-        var levelNumberElement = document.querySelector('.levelNumber');
+        }
 
-        // Get the current level number
-        var currentLevel = parseInt(levelNumberElement.textContent);
+        function increaseLevel() {
+            // Get the element containing the level number by its class
+            var levelNumberElement = document.querySelector('.levelNumber');
 
-        // Increase the level by one
-        var newLevel = currentLevel + 1;
+            // Get the current level number
+            var currentLevel = parseInt(levelNumberElement.textContent);
 
-        // Update the content with the new level number
-        levelNumberElement.textContent = newLevel;
+            // Increase the level by one
+            var newLevel = currentLevel + 1;
 
-        // get coins
-        coinsIncrease();
-      }
+            // Update the content with the new level number
+            levelNumberElement.textContent = newLevel;
 
-      function coinsIncrease() {
-        var coinNumberElement = document.querySelector('.coinsNumber');
-        var currentCoins = parseInt(coinNumberElement.textContent);
-        var newCoinAmount = currentCoins + 50;
-        coinNumberElement.textContent = newCoinAmount;
-      }
+            // get coins
+            let snowTime = 4200;
+            coinsIncrease();
+        }
 
-      function checkWindowSize() {
-    const minWidth = 700; // Minimum width required
-    const minHeight = 700; // Minimum height required
+        function coinsIncrease() {
+            var coinNumberElement = document.querySelector('.coinsNumber');
+            var currentCoins = parseInt(coinNumberElement.textContent);
+            var newCoinAmount = currentCoins + 20;
+            coinNumberElement.textContent = newCoinAmount;
+        }
 
-    const currentWidth = window.innerWidth;
-    const currentHeight = window.innerHeight;
+        function checkWindowSize() {
+            const minWidth = 700; // Minimum width required
+            const minHeight = 700; // Minimum height required
 
-    if (currentWidth < minWidth || currentHeight < minHeight) {
-        document.getElementById('overlay').style.display = 'block';
-        // Disable interactions
-        document.body.style.pointerEvents = 'none';
-    } else {
-        document.getElementById('overlay').style.display = 'none';
-        // Enable interactions
-        document.body.style.pointerEvents = 'auto';
-    }
-}
+            const currentWidth = window.innerWidth;
+            const currentHeight = window.innerHeight;
 
-// Check window size on load and resize
-window.addEventListener('load', checkWindowSize);
-window.addEventListener('resize', checkWindowSize);
+            if (currentWidth < minWidth || currentHeight < minHeight) {
+                document.getElementById('overlay').style.display = 'block';
+                // Disable interactions
+                document.body.style.pointerEvents = 'none';
+            } else {
+                document.getElementById('overlay').style.display = 'none';
+                // Enable interactions
+                document.body.style.pointerEvents = 'auto';
+            }
+        }
 
-function upgradeDensity() {
-  var coinNumberElement = document.querySelector('.coinsNumber');
-  var currentCoins = parseInt(coinNumberElement.textContent);
-  
-  if (currentCoins >= 10) {
-    var newCoinAmount = currentCoins - 10;
-    coinNumberElement.textContent = newCoinAmount;
-  }
-}
+        // Check window size on load and resize
+        window.addEventListener('load', checkWindowSize);
+        window.addEventListener('resize', checkWindowSize);
 
-function increaseProgress() {
+        function upgradeDensity() {
+            var coinNumberElement = document.querySelector('.coinsNumber');
+            var currentCoins = parseInt(coinNumberElement.textContent);
+
+            if (currentCoins >= 50) {
+                var newCoinAmount = currentCoins - 50;
+                coinNumberElement.textContent = newCoinAmount;
+            }
+        }
+
+        function increaseProgress() {
+            var coinNumberElement = document.querySelector('.coinsNumber');
+            var currentCoins = parseInt(coinNumberElement.textContent);
+
             const progressBar = document.getElementById('progressBar');
             let currentWidth = parseInt(progressBar.style.width) || 0;
-            currentWidth += 2;
-            if (currentWidth <= 100) {
+            currentWidth += 1;
+            if (currentWidth < 100) {
                 progressBar.style.width = currentWidth + '%';
+            }
+            else {
+                progressBar.style.width = 0 + '%';
+                var newCoinAmount = currentCoins + 5;
+                coinNumberElement.textContent = newCoinAmount;
             }
         }
 
 
-  </script>
+    </script>
 </body>
 
 </html>
