--- a/MainPage.html
+++ b/MainPage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <title>The Snowflake Game</title>
 <html>
-
+<head>
+    <meta name="google-site-verification" content="bLfH8_v4wRbDumxosSqvi0mAagJMVL9tQd7g1JAo8tU" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1399294839485685"
     crossorigin="anonymous"></script>
     
@@ -567,6 +568,7 @@ html, body {
 
 
 </style>
+</head>
 
 <body>
 
