--- a/MainPage.html
+++ b/MainPage.html
@@ -2,9 +2,7 @@
 <title>The Snowflake Game</title>
 <html>
 <head>
-    <meta name="google-site-verification" content="bLfH8_v4wRbDumxosSqvi0mAagJMVL9tQd7g1JAo8tU" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1399294839485685"
-    crossorigin="anonymous"></script>
+    <meta name="google-site-verification" content="your-verification-code" />
     
     <link rel="shortcut icon" type="x-icon" href="white-snowflake.png">
 
